# syldavia-gazette

./: .gitignore  README.md  _publish.yml  _quarto.yml  about.qmd  digest.bib  hello.ipynb  index.qmd  newsletter.qmd  notebooks.qmd  plausible.html  privacy-policy.qmd  pyproject.toml  references.bib  retraction_watch.ipynb  subscribe.html  theme.scss  weekly_digest.ipynb
.github/workflows/: publish.yml
_site/: about.html  index-digest.xml  index.html  index.xml  listings.json  newsletter.html  privacy-policy.html  robots.txt  search.json  sitemap.xml
_site/covid-ancient-migrations-peer-review/: index.html
_site/data-sharing-challenger-expedition-research-software/: index.html
_site/dodo-dataviz-maize/: index.html
_site/guinea-worms-chatgpt-neanderthals/: index.html
_site/open-access-week-scholarly-blogosphere/: index.html
_site/oyster-mushrooms-hearing-accessibility/: index.html
_site/planetary-defense-healthy-food-slime/: index.html
_site/proust-rights-of-nature-standard-model/: index.html
_site/rogue-scholar-digest-november-2-2023/: index.html
docs/: about.html  about.md  hello.html  index.html  index.xml  listings.json  newsletter.html  newsletter.md  privacy-policy.html  privacy-policy.md  retraction_watch.html  robots.txt  search.json  sitemap.xml  weekly_digest.html
notebooks/: _metadata.yml  digest-2023-11-22.ipynb  digest-2023-11-29.ipynb  digest.json  references.bib  references.json  retraction_watch.ipynb  weekly_digest.ipynb
posts/: _metadata.yml  rogue-scholar-digest-november-2-2023.qmd  rogue-scholar-digest-november-8-2023.qmd
(+129 files in other folders)
